sandbox/output
StringCalculator.java:9: error: ';' expected
        retrun add(res);
                  ^
StringCalculator.java:9: error: not a statement
        retrun add(res);
                   ^
StringCalculator.java:9: error: ';' expected
        retrun add(res);
                      ^
3 errors
